--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,110 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Recruitment task</title>
+    <title>Emanuel Kunda</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <script src="https://www.youtube.com/player_api"></script>
 </head>
 <body>
-test
+    <div class="header">
+        <div class="bgBlur"></div>
+        <div class="bgElement"></div>
+        <navi class="navi">
+            <div class="navi_left">
+                <h2 class="navi_logo">Logo</h2>
+                <ul class="navi_links">
+                    <li class="navi_link"><a href="#">Home</a></li>
+                    <li class="navi_link"><a href="#">About</a></li>
+                    <li class="navi_link"><a href="#">Services</a></li>
+                    <li class="navi_link"><a href="#">Pages</a></li>
+                </ul>
+            </div>
+            <div class="navi_right">
+                <p class="navi_contact">Call Us: <a href="tel:48 123 456 789">+48 123 456 789</a></p>
+                <select class="navi_language">
+                    <option value="0">EN</option>
+                    <option value="0">PL</option>
+                    <option value="0">ES</option>
+                    <option value="0">RU</option>
+                    <option value="0">CN</option>
+                    <img src="../img/Arrow.png" alt="image">
+                </select>
+                <button class="navi_button">Contact Us</button>
+            </div>
+            <div class="navi_hamburger">
+                <span class="line"></span>
+                <span class="line"></span>
+                <span class="line"></span>
+            </div>
+        </navi>
+        <header id="hero" class="hero">
+            <div class="hero_text">
+                <h1>Lorem ipsum dolor sit amet</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lobortis leo ut felis vestibulum cursus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;</p>
+            </div>
+            <div class="hero_cta">
+                <button class="hero_button">
+                    <img src="../img/play.png" alt="play">
+                    <span class="line"></span>
+                </button>
+                <p><span>Watch</span> demo video</p>
+            </div>
+            <div class="hero_rectangles rect1"></div>
+            <div class="hero_rectangles rect2"></div>
+            <div class="hero_rectangles rect3"></div>
+            <img class="ellipse1" src="../img/Ellipse1.png" alt="background ellipse">
+        </header>
+        <section id="blog" class="blog">    
+            <img class="blog_ellipse" src="../img/Ellipse2.png" alt="ellipse">          
+            <div class="blog_heading">
+                <h3>our blog</h3>
+                <h2>Lorem ipsum dolor</h2>
+            </div>
+            <div class="blog_items">
+                <div class="blog_item blog_item--highlighted">
+                    <header class="highlighted">
+                        <h3>Frank Lampard</h3>
+                        <p>20 Jan, 2023</p>
+                    </header>
+                    <p class="blog_description">Lorem ipsum dolor sit amet, consectur</p>
+                    <button><span>More</span></button>
+                    <div class="circle"></div>
+                </div>
+                <div class="blog_item">
+                    <header class="secondary">
+                        <div class="circle"></div>
+                        <div class="text">
+                            <h3>Paul Scholes</h3>
+                            <p>15 Jan, 2023</p>
+                        </div>
+                    </header>
+                    <hr>
+                    <div class="blog_description">
+                        <p class="top">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="bottom">Lorem ipsum dolor sit amet, consectetur adipisci elit sour. Commodo amet posuere porta ener shlppe up.</p>
+                    </div>
+                    <button><a href="">Read more</a></button>
+                </div>
+                <div class="blog_item">
+                    <header class="secondary">
+                        <div class="circle"></div>
+                        <div class="text">
+                            <h3>Harry Kane</h3>
+                            <p>15 Jan, 2023</p>
+                        </div>
+                    </header>
+                    <hr>
+                    <div class="blog_description">
+                        <p class="top">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="bottom">Lorem ipsum dolor sit amet, consectetur adipisci elit sour. Commodo amet posuere porta ener shlppe up.</p>
+                    </div>
+                    <button><a href="">Read more</a></button>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="video-popup"></div>
 </body>
 </html>
